progress circle progress set for skills

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li><a class='page-scroll' href="#work">W O R K</a></li>
                         <li><a class='page-scroll' href="#skills">S K I L L S</a></li>
                         <li><a class='page-scroll' href="#contact">C O N T A C T</a></li>
-                        <li><a href="SCHAFER_JuniorDevCV.pdf" download>C V</a></li>
+                        <li><a href="SCHAFER_JuniorDevCV.pdf" target='_blank'>C V</a></li>
                     </ul>
 
                 </div>
@@ -172,7 +172,7 @@
                         <p class='html'>.html</p>
                     </div>
                     <div class="arc-wrapper">
-                        <div class="arc2"></div>
+                        <div id='html-load2' class="arc2"></div>
                         <div class="arc1"></div>
                     </div>
 
@@ -184,7 +184,6 @@
                         <p class='css'>.css</p>
                     </div>
                     <div class="arc-wrapper">
-                        <div class="arc2"></div>
                         <div class="arc1"></div>
                     </div>
                 </div>
@@ -195,7 +194,7 @@
                         <p class='js'>.js</p>
                     </div>
                     <div class="arc-wrapper">
-                        <div class="arc2"></div>
+                        <div id ='js-load2' class="arc2"></div>
                         <div class="arc1"></div>
                     </div>
                 </div>
@@ -206,7 +205,7 @@
                         <p class='py'>.py</p>
                     </div>
                     <div class="arc-wrapper">
-                        <div class="arc2"></div>
+                        <div id='py-load2' class="arc2"></div>
                         <div class="arc1"></div>
                     </div>
                 </div>
@@ -217,7 +216,7 @@
                         <p class='sql'>SQL</p>
                     </div>
                     <div class="arc-wrapper">
-                        <div class="arc2"></div>
+                        <div id='sql-load2' class="arc2 "></div>
                         <div class="arc1"></div>
                     </div>
                 </div>
@@ -228,7 +227,7 @@
                         <p class='django'>Django</p>
                     </div>
                     <div class="arc-wrapper">
-                        <div class="arc2"></div>
+                        <div id='dj-load2' class="arc2"></div>
                         <div class="arc1"></div>
                     </div>
                 </div>
@@ -240,6 +239,7 @@
             <br>
         </div>
     </div>
+    
     <!---------CONTACT--------->
     <div class="jumbotron contact">
         <div class="container" id='contact'>
