font size and responsive styling changes

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
                 </div>
             </div>
         </nav>
-        <div class="container">
+        <div class="container top">
+            <br>
+            <br>
             <br>
             <h1 class='name'>Haley Schafer</h1>
-            <p>Full-Stack Software Developer</p>
+            <p class='title'>Full-Stack Software Developer</p>
 
         </div>
     </div>
@@ -59,10 +61,10 @@
             <h2>A B O U T</h2>
             <br>
             <div class="col-xs-hidden col-sm-4">
-                <p>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a recent graduate of Code Institute working with front-end and back-end frameworks. </p>
+                <p id='about-p'>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a recent graduate of Code Institute working with front-end and back-end frameworks. </p>
             </div>
             <div class="col-xs-hidden col-sm-4">
-                <p>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
+                <p id='about-p'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
             <div class="col-xs-hidden col-sm-4">
 
@@ -246,7 +248,7 @@
             <div class="col-sm-6"></div>
             <div class="col-xs-12 col-sm-6 contact-form">
                 <br>
-                <h3>C O N T A C T</h3>
+                <h2 id='contact-head'>C O N T A C T</h2>
                 <br>
                 <form>
                     <div class="row">
@@ -273,7 +275,7 @@
                         </div>
                     </div>
                     <br>
-                    <button type="submit" class="btn btn-default">Send</button>
+                    <button type="submit" id='contact-btn' class="btn btn-default">Send</button>
                 </form>
             </div>
         </div>
