Small CSS fixes and French version connected with beginning translations

--- a/FR_index.html
+++ b/FR_index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
     margin-right: 1%;
     margin-top: 1%;">
                 <div class="navbar-header">
-                    <a href="FR_index.html" class='language'>fr</a>
+                    <a href="index.html" class='language'>en</a>
                     <button id = 'scroll-button' type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -37,7 +37,7 @@
                         <li><a class='page-scroll' href="#about">About</a></li>
                         <li><a class='page-scroll' href="#work">Work</a></li>
                         <li><a class='page-scroll' href="#skills">Skills</a></li>
-                        <li><a class='page-scroll' href="#contact">Contact</a></li>
+                        <li><a class='page-scroll' href="#contact">Contacter</a></li>
                         <li><a href="SCHAFER_JuniorDevCV.pdf" target='_blank'>CV</a></li>
                     </ul>
 
@@ -250,25 +250,25 @@
             <div class="col-sm-6"></div>
             <div class="col-xs-12 col-sm-6 contact-form">
                 <br>
-                <h2 id='contact-head'>Contact</h2>
+                <h2 id='contact-head'>Contacter</h2>
                 <br>
                 <form action="https://formspree.io/hschafer@umich.edu"
       method="POST">
                     <div class="row">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="exampleInputName" name= 'Name' placeholder="Name">
+                            <input type="text" class="form-control" id="exampleInputName" name= 'Name' placeholder="Nom">
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="exampleInputPhone" name='Phone' placeholder="Phone">
+                            <input type="text" class="form-control" id="exampleInputPhone" name='Phone' placeholder="Numéro de Téléphone">
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="form-group">
-                            <input type="email" class="form-control" id="exampleInputEmail1" name='Email' placeholder="Email">
+                            <input type="email" class="form-control" id="exampleInputEmail1" name='Email' placeholder="Mail">
                         </div>
                     </div>
                     <br>
@@ -278,7 +278,7 @@
                         </div>
                     </div>
                     <br>
-                    <input type="submit" value='Send' id='contact-btn' placeholder='Send' class="btn btn-default">
+                    <input type="submit" value='Envoyer' id='contact-btn' placeholder='Send' class="btn btn-default">
                 </form>
             </div>
         </div>
