French translation of index.html

--- a/FR_index.html
+++ b/FR_index.html
@@ -34,9 +34,9 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class='page-scroll' href="#about">About</a></li>
-                        <li><a class='page-scroll' href="#work">Work</a></li>
-                        <li><a class='page-scroll' href="#skills">Skills</a></li>
+                        <li><a class='page-scroll' href="#about">À propos</a></li>
+                        <li><a class='page-scroll' href="#work">Travail</a></li>
+                        <li><a class='page-scroll' href="#skills">Compétences</a></li>
                         <li><a class='page-scroll' href="#contact">Contacter</a></li>
                         <li><a href="SCHAFER_JuniorDevCV.pdf" target='_blank'>CV</a></li>
                     </ul>
@@ -49,7 +49,8 @@
             <br>
             <br>
             <h1 class='name'>Haley Schafer</h1>
-            <p class='title'>Full-Stack Software Developer</p>
+            <p class='title'>Full-Stack Développeur</p>
+            <p class='title'>d’Application de Web</p>
 
         </div>
     </div>
@@ -59,13 +60,13 @@
         <div class="row" id='about'>
             <br>
             <br>
-            <h2>About</h2>
+            <h2>À Propos</h2>
             <br>
             <div class="col-xs-hidden col-sm-4">
-                <p id='about-p'>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a recent graduate of Code Institute working with front-end and back-end frameworks. </p>
+                <p id='about-p'>J’ai de l’expérience des ventes et de la gestion des clients d’assurance au secteur des technologies. En transférante vers le développement de logiciel, je suis fraîchement diplômée de Code Institute à travailler avec des développements back-end et front-end.</p>
             </div>
             <div class="col-xs-hidden col-sm-4">
-                <p id='about-p'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
+                <p id='about-p'>Je me spécialise en les langues de code HTML, CSS, JavaScript, et Python, en utilisant les structures de Django et Flask. Passionnée par la création d’une expérience d’utilisateur positive, j’aime bien adapter aux ces technologies qui se présentent.</p>
             </div>
             <div class="col-xs-hidden col-sm-4">
 
@@ -85,7 +86,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Timing Assistant</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Flask, JavaScript, MongoDB</h6>
-                        <p id="card-text">A stopwatch to time multiple athletes simultaneously in swimming and track.</p>
+                        <p id="card-text">Un chronomètre pour plusieurs sportifs pour la natation et l’athlétisme.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="https://timing-assistant.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Sports-Multi-timer-Assistant" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -98,7 +99,7 @@
                     <div class="card-body">
                         <h5 class="card-title">PC Swimming</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Django, Python, AWS </h6>
-                        <p id="card-text">An e-commerce site for PC Swimming and Diving for swimmers and alumni.</p>
+                        <p id="card-text">Un site d’e-commerce pour les nageurs et les anciens de PC Swimming and Diving.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="https://www.https://pcswimming-project.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/PCSwimming" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -111,7 +112,7 @@
                     <div id="card-text">
                         <h5 class="card-title">Give A GIF</h5>
                         <h6 class="card-subtitle mb-2 text-muted">RESTful API, JavaScript, Flask, Python</h6>
-                        <p id="card-text">A random GIF generator using an API and a backend.</p>
+                        <p id="card-text">Un générateur aléatoire de GIF, utilisant un RESTful API. </p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Give-A-GIF" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -124,7 +125,7 @@
                     <div id="card-text">
                         <h5 class="card-title">Bop It! Game</h5>
                         <h6 class="card-subtitle mb-2 text-muted">JavaScript, jQuery, HTML</h6>
-                        <p id="card-text">Inspired by the children's game, optimised for desktop and mobile.</p>
+                        <p id="card-text">Inspiré par le jeu d’enfants, et optimisé pour l’ordinateur et le mobile.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="https://hschafer2017.github.io/Stream-Two-Project/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Stream-Two-Project" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -137,7 +138,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Portfolio Site</h5>
                         <h6 class="card-subtitle mb-2 text-muted">HTML, CSS, Bootstrap</h6>
-                        <p id="card-text">A static website to showcase developer projects for prospective employers.</p>
+                        <p id="card-text">Un site statique à presenter les projets pour les employeurs prospectifs.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/HSCHAFER-Portfolio" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -150,7 +151,7 @@
                     <div class="card-body">
                         <h5 class="card-title">World Wide Weather</h5>
                         <h6 class="card-subtitle mb-2 text-muted">JavaScript, API, HTML, CSS</h6>
-                        <p id="card-text">Using an API, search for the current weather data for a location.</p>
+                        <p id="card-text">Utilisant un API, rechercher le data du météo actuel pour votre ville.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Weather-Search-API" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
@@ -166,7 +167,7 @@
         <div class="row skills-row" id='skills'>
             <br>
             <br>
-            <h2>Skills</h2>
+            <h2>Compétences</h2>
         </div>
         <div class="container skills-inner">
             <div class="col-xs-6 col-sm-4 skill-circle">
