readMe updates for responsive gif

--- a/FR_index.html
+++ b/FR_index.html
@@ -253,8 +253,7 @@
                 <br>
                 <h2 id='contact-head'>Contacter</h2>
                 <br>
-                <form action="https://formspree.io/hschafer@umich.edu"
-      method="POST">
+                <form >
                     <div class="row">
                         <div class="form-group">
                             <input type="text" class="form-control" id="exampleInputName" name= 'Name' placeholder="Nom">
