--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
                 <br>
                 <h2 id='contact-head'>Contact</h2>
                 <br>
-                <form action="https://formspree.io/hschafer@umich.edu" method="POST">
+                <form>
                     <div class="row">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="exampleInputName" name='Name' placeholder="Name">
+                            <input type="text" class="form-control" id="exampleInputName" name='Name' placeholder="Name" required>
                         </div>
                     </div>
                     <br>
@@ -269,13 +269,13 @@
                     <br>
                     <div class="row">
                         <div class="form-group">
-                            <input type="email" class="form-control" id="exampleInputEmail1" name='Email' placeholder="Email">
+                            <input type="email" class="form-control" id="exampleInputEmail1" name='Email' placeholder="Email" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="form-group message">
-                            <textarea class="form-control" name="message" rows="6" placeholder="Message"></textarea>
+                            <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                         </div>
                     </div>
                     <br>
