--- a/FR_index.html
+++ b/FR_index.html
@@ -16,7 +16,7 @@
 
 
     <!------------TOP JUMBOTRON/NAVBAR------------>
-    <div class="jumbotron main">
+    <div class="jumbotron landing-view-section">
         <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
             <div class="container" style="text-align: right;
     margin-right: 1%;
@@ -48,38 +48,43 @@
             <br>
             <br>
             <br>
-            <h1 class='name'>Haley Schafer</h1>
-            <p class='title'>Full-Stack Développeur</p>
-            <p class='title'>d’Application de Web</p>
-
+            <h1>Haley Schafer</h1>
+            <div class="row">
+                <div class="col-xs-hidden col-sm-4 col-md-4">
+                    <p>Full-Stack Développeur d’Application de Web</p>
+                </div>
+            </div>
         </div>
     </div>
 
     <!---------ABOUT ME---------->
-    <div class="container about-row">
-        <div class="row" id='about'>
-            <br>
-            <br>
-            <h2>À Propos</h2>
-            <br>
-            <div class="col-xs-hidden col-sm-4">
-                <p id='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement logiciel, je viens d'être diplomée de Code Institute en front-end et back-end. Je me spécialise dans le développement d'application web </p>
-            </div>
-            <div class="col-xs-hidden col-sm-4">
-                <p id='about-p'> Je travaille avec les frameworks Flask et Django (Python), ainsi que languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'apprécie m'approprier continuellement les technologies les plus récentes.</p>
-            </div>
-            <div class="col-xs-hidden col-sm-4">
-
+    <div class="about-me-section">
+        <div class="container about-row">
+            <div class="row" id='about'>
+                <br>
+                <br>
+                <h2>À Propos</h2>
+                <br>
+                <div class="col-xs-hidden col-sm-6">
+                    <p id='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement logiciel, je viens d'être diplomée de Code Institute en front-end et back-end. Je
+                        me spécialise dans le développement d'application web </p>
+                        <br>
+                        <p id='about-p' class='hidden-sm'> Je travaille avec les frameworks Flask et Django (Python), ainsi que languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'apprécie m'approprier continuellement les
+                        technologies les plus récentes.</p>
+                </div>
+                <div class="col-xs-hidden col-sm-6">
+                    <p id='about-p' class='hidden-xs hidden-md hidden-lg'> Je travaille avec les frameworks Flask et Django (Python), ainsi que languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'apprécie m'approprier continuellement les
+                        technologies les plus récentes.</p>
+                </div>
+                <br>
+                <br>
             </div>
             <br>
             <br>
         </div>
-        <br>
-        <br>
     </div>
-
     <!--------------WORK------------->
-    <div class="jumbotron work">
+    <div class="jumbotron work-section">
         <div class="container" id='work'>
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
@@ -140,7 +145,7 @@
                         <h6 class="card-subtitle mb-2 text-muted">HTML, CSS, Bootstrap</h6>
                         <p id="card-text">Un site statique à presenter les projets pour les employeurs prospectifs.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://hschafer2017.github.io/HSCHAFER-Portfolio/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/HSCHAFER-Portfolio" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
@@ -153,7 +158,7 @@
                         <h6 class="card-subtitle mb-2 text-muted">JavaScript, API, HTML, CSS</h6>
                         <p id="card-text">Utilisant un API, rechercher le data du météo actuel pour votre ville.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://hschafer2017.github.io/Weather-Search-API/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Weather-Search-API" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
@@ -163,90 +168,91 @@
     </div>
 
     <!------------SKILLS------------>
-    <div class="container skills">
-        <div class="row skills-row" id='skills'>
-            <br>
-            <br>
-            <h2>Compétences</h2>
-        </div>
-        <div class="container skills-inner">
-            <div class="col-xs-6 col-sm-4 skill-circle">
-                <div class="arc-container">
-                    <div class="arc-overlay">
-                        <p class='html'>.html</p>
-                    </div>
-                    <div class="arc-wrapper">
-                        <div id='html-load2' class="arc2"></div>
-                        <div class="arc1"></div>
-                    </div>
+    <div class="skills-section">
+        <div class="container skills">
+            <div class="row skills-row" id='skills'>
+                <br>
+                <br>
+                <h2>Compétences</h2>
+            </div>
+            <div class="container skills-inner">
+                <div class="col-xs-6 col-sm-4 skill-circle">
+                    <div class="arc-container">
+                        <div class="arc-overlay">
+                            <p class='html'>.html</p>
+                        </div>
+                        <div class="arc-wrapper">
+                            <div id='html-load2' class="arc2"></div>
+                            <div class="arc1"></div>
+                        </div>
 
-                </div>
-            </div>
-            <div class="col-xs-6 col-sm-4 skill-circle">
-                <div class="arc-container">
-                    <div class="arc-overlay">
-                        <p class='css'>.css</p>
-                    </div>
-                    <div class="arc-wrapper">
-                        <div id='css-load2' class="arc2 "></div>
-                        <div class="arc1"></div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-6 col-sm-4 skill-circle">
-                <div class="arc-container">
-                    <div class="arc-overlay">
-                        <p class='js'>.js</p>
-                    </div>
-                    <div class="arc-wrapper">
-                        <div id='js-load2' class="arc2"></div>
-                        <div class="arc1"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-6 col-sm-4 skill-circle">
-                <div class="arc-container">
-                    <div class="arc-overlay">
-                        <p class='py'>.py</p>
-                    </div>
-                    <div class="arc-wrapper">
-                        <div id='py-load2' class="arc2"></div>
-                        <div class="arc1"></div>
+                <div class="col-xs-6 col-sm-4 skill-circle">
+                    <div class="arc-container">
+                        <div class="arc-overlay">
+                            <p class='css'>.css</p>
+                        </div>
+                        <div class="arc-wrapper">
+                            <div id='css-load2' class="arc2 "></div>
+                            <div class="arc1"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-6 col-sm-4 skill-circle">
-                <div class="arc-container">
-                    <div class="arc-overlay">
-                        <p class='sql'>SQL</p>
+                <div class="col-xs-6 col-sm-4 skill-circle">
+                    <div class="arc-container">
+                        <div class="arc-overlay">
+                            <p class='js'>.js</p>
+                        </div>
+                        <div class="arc-wrapper">
+                            <div id='js-load2' class="arc2"></div>
+                            <div class="arc1"></div>
+                        </div>
                     </div>
-                    <div class="arc-wrapper">
+                </div>
+                <div class="col-xs-6 col-sm-4 skill-circle">
+                    <div class="arc-container">
+                        <div class="arc-overlay">
+                            <p class='py'>.py</p>
+                        </div>
+                        <div class="arc-wrapper">
+                            <div id='py-load2' class="arc2"></div>
+                            <div class="arc1"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-sm-4 skill-circle">
+                    <div class="arc-container">
+                        <div class="arc-overlay">
+                            <p class='sql'>SQL</p>
+                        </div>
+                        <div class="arc-wrapper">
 
-                        <div class="arc1"></div>
+                            <div class="arc1"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-6 col-sm-4 skill-circle">
-                <div class="arc-container">
-                    <div class="arc-overlay">
-                        <p class='django'>Django</p>
-                    </div>
-                    <div class="arc-wrapper">
-                        <div id='dj-load2' class="arc2"></div>
-                        <div class="arc1"></div>
+                <div class="col-xs-6 col-sm-4 skill-circle">
+                    <div class="arc-container">
+                        <div class="arc-overlay">
+                            <p class='django'>Django</p>
+                        </div>
+                        <div class="arc-wrapper">
+                            <div id='dj-load2' class="arc2"></div>
+                            <div class="arc1"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <br>
-            <br>
+                <br>
+                <br>
 
-            <br>
-            <br>
+                <br>
+                <br>
+            </div>
         </div>
     </div>
-
     <!---------CONTACT--------->
-    <div class="jumbotron contact">
+    <div class="jumbotron contact-section">
         <div class="container" id='contact'>
             <div class="col-sm-6"></div>
             <div class="col-xs-12 col-sm-6 contact-form">
@@ -278,7 +284,7 @@
                         </div>
                     </div>
                     <br>
-                    <input type="submit" value='Envoyer' id='contact-btn' placeholder='Send' class="btn btn-default">
+                    <input type="submit" value='Envoyer' id='contact-btn' class="btn btn-default">
                 </form>
             </div>
         </div>
