broken links fix, slight css fix, and readme addition

--- a/FR_index.html
+++ b/FR_index.html
@@ -107,7 +107,7 @@
                         <h6 class="card-subtitle mb-2 text-muted">Django, Python, AWS </h6>
                         <p id="card-text">Un site d’e-commerce pour les nageurs et les anciens de PC Swimming and Diving.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://www.https://pcswimming-project.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://pcswimming-project.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/PCSwimming" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                         <h6 class="card-subtitle mb-2 text-muted">RESTful API, JavaScript, Flask, Python</h6>
                         <p id="card-text">Un générateur aléatoire de GIF, utilisant un RESTful API. </p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://hschafer2017.github.io/Give-A-GIF/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Give-A-GIF" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
@@ -299,7 +299,7 @@
                     <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download"></i></a>
-                    <a href="#" style='padding-right: 0px' target="_blank"><i class="fab fa-medium-m"></i></a>
+                    <a href="https://medium.com/@haleyschafer" style='padding-right: 0px' target="_blank"><i class="fab fa-medium-m"></i></a>
                 </div>
             </div>
         </div>
