--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <h6 class="card-subtitle mb-2 text-muted">Django, Python, AWS </h6>
                         <p id="card-text">An e-commerce site for PC Swimming and Diving for swimmers and alumni.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://www.https://pcswimming-project.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://pcswimming-project.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/PCSwimming" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                         <h6 class="card-subtitle mb-2 text-muted">RESTful API, JavaScript, Flask, Python</h6>
                         <p id="card-text">A random GIF generator using an API and a backend.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://hschafer2017.github.io/Give-A-GIF/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
                             <a href="https://github.com/hschafer2017/Give-A-GIF" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
