french version contact form bug fix

--- a/FR_index.html
+++ b/FR_index.html
@@ -263,25 +263,25 @@
                 <form>
                     <div class="row">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="exampleInputName" name='Name' placeholder="Nom">
+                            <input type="text" class="form-control" id="exampleInputName" name='Name' placeholder="Nom" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="exampleInputPhone" name='Phone' placeholder="Numéro de Téléphone">
+                            <input type="text" class="form-control" id="exampleInputPhone" name='Phone' placeholder="Numéro de Téléphone" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="form-group">
-                            <input type="email" class="form-control" id="exampleInputEmail1" name='Email' placeholder="Mail">
+                            <input type="email" class="form-control" id="exampleInputEmail1" name='Email' placeholder="Mail" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="form-group message">
-                            <textarea class="form-control" name="message" rows="6" placeholder="Message"></textarea>
+                            <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                         </div>
                     </div>
                     <br>
