--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./libraries/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nobile" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Haley Schafer Portfolio</title>
 </head>
 
@@ -39,7 +39,7 @@
                         <li><a class='page-scroll' href="#work">Work</a></li>
                         <li><a class='page-scroll' href="#skills">Skills</a></li>
                         <li><a class='page-scroll' href="#contact">Contact</a></li>
-                        <li><a href="SCHAFER_JuniorDevCV.pdf" target='_blank'>CV</a></li>
+                        <li><a href="assets/images/SCHAFER_JuniorDevCV.pdf" target='_blank'>CV</a></li>
                     </ul>
 
                 </div>
@@ -292,7 +292,7 @@
                 <div class="col-xs-12 col-sm-12 icons">
                     <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download"></i></a>
+                    <a href="assets/images/SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download"></i></a>
                     <a href="https://medium.com/@haleyschafer" style='padding-right: 0px' target="_blank"><i class="fab fa-medium-m"></i></a>
                 </div>
             </div>
@@ -301,7 +301,7 @@
 
     <script type="text/javascript" src="./libraries/jquery.min.js"></script>
     <script type="text/javascript" src="./libraries/bootstrap.min.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="assets/js/index.js"></script>
 
 </body>
 
